--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-﻿Flask==1.1.1
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==0.15.5
-numpy>=1.9.2
-scipy>=0.15.1
+click==8.1.3
+colorama==0.4.5
+Flask==2.1.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.1.0
+MarkupSafe==2.1.1
+numpy==1.23.1
+pandas==1.4.3
+python-dateutil==2.8.2
+pytz==2022.1
 scikit-learn==1.1.1
-matplotlib>=1.4.3
-pandas>=0.19
+scipy==1.8.1
+six==1.16.0
+sklearn==0.0
+threadpoolctl==3.1.0
+Werkzeug==2.2.0
