--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-click==8.1.3
-colorama==0.4.5
-Flask==2.1.3
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.1.0
-MarkupSafe==2.1.1
-numpy==1.23.1
-pandas==1.4.3
-python-dateutil==2.8.2
-pytz==2022.1
-scikit-learn==1.1.1
-scipy==1.8.1
-six==1.16.0
-sklearn==0.0
-threadpoolctl==3.1.0
-Werkzeug==2.2.0
-gunicorn==19.9.0
-matplotlib>=1.4.3
+click
+colorama
+Flask
+itsdangerous
+Jinja2
+joblib
+MarkupSafe
+numpy
+pandas
+python-dateutil
+pytz
+scikit-learn
+scipy
+six
+sklearn
+threadpoolctl
+Werkzeug
+gunicorn
+matplotlib
